refactor: Don't use mui/styles at all feat: hooks refactor: Layout refactor: Routes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React TypScript Material",
-  "name": "React + Material UI + Auth starter using TypeScript",
+  "short_name": "_TITLE_",
+  "name": "_TITLE_",
   "icons": [
     {
       "src": "/favicon.ico",
