--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-typescript-material",
-  "version": "1.3.8",
-  "description": "React + Material UI + Auth starter using TypeScript",
+  "version": "2.0.11",
+  "description": "_DESCRIPTION_",
   "author": {
     "name": "Anton Karpenko",
     "email": "i@karpolan.com",
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "dev": "npm i --force && react-scripts start",
+    "dev": "npm i && react-scripts start",
     "format": "prettier ./src --write",
     "format:all": "prettier . --write",
     "lint": "eslint ./src --ext .js,.ts,.tsx",
@@ -33,7 +33,6 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "@mui/styles": "latest",
     "date-fns": "latest",
     "react": "latest",
     "react-dom": "latest",
