--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,9 @@
-REACT_APP_VERSION = $npm_package_version
+
+# Debug mode 
+REACT_APP_DEBUG = true
+
+# API/Backend basic URL
 REACT_APP_URL_API = http://localhost:3030/api
+
+# Runtime helpers
+REACT_APP_VERSION = $npm_package_version
